--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
+        "lint": "prettier --check . && eslint .",
         "format": "prettier --write .",
-        "pre:push": "npm run format",
+        "pre:push": "npm run format && npm run lint",
+        "test": "vitest",
         "dev": "vite dev",
         "build": "vite build",
         "preview": "vite preview"
@@ -17,10 +19,18 @@
     "devDependencies": {
         "@sveltejs/adapter-auto": "^3.2.1",
         "@sveltejs/kit": "^2.5.10",
+        "@types/eslint": "^8.56.10",
+        "@types/eslint__js": "^8.42.3",
+        "@types/eslint-config-prettier": "^6.11.3",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-svelte": "^2.39.0",
+        "globals": "^15.3.0",
         "prettier": "^3.3.0",
         "prettier-plugin-svelte": "^3.2.3",
         "svelte": "^4.2.17",
         "typescript": "^5.4.5",
+        "typescript-eslint": "^7.12.0",
         "vite": "^5.2.12",
         "vitest": "^1.6.0"
     }
