--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "test": "vitest",
         "dev": "vite dev",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "database:generate": "drizzle-kit generate"
     },
     "keywords": [],
     "author": "",
@@ -22,6 +23,8 @@
         "@types/eslint": "^8.56.10",
         "@types/eslint__js": "^8.42.3",
         "@types/eslint-config-prettier": "^6.11.3",
+        "@types/uuid": "^9.0.8",
+        "drizzle-kit": "^0.22.2",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-svelte": "^2.39.0",
@@ -33,5 +36,9 @@
         "typescript-eslint": "^7.12.0",
         "vite": "^5.2.12",
         "vitest": "^1.6.0"
+    },
+    "dependencies": {
+        "drizzle-orm": "^0.31.1",
+        "uuid": "^9.0.1"
     }
 }
