--- a/package.json
+++ b/package.json
@@ -23,21 +23,30 @@
         "@types/eslint": "^8.56.10",
         "@types/eslint__js": "^8.42.3",
         "@types/eslint-config-prettier": "^6.11.3",
+        "@types/node": "^20.14.2",
+        "@types/progress": "^2.0.7",
         "@types/uuid": "^9.0.8",
+        "commander": "^12.1.0",
         "drizzle-kit": "^0.22.2",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-svelte": "^2.39.0",
         "globals": "^15.3.0",
+        "jmdict.js": "^0.2.3",
+        "pg": "^8.12.0",
         "prettier": "^3.3.0",
         "prettier-plugin-svelte": "^3.2.3",
+        "progress": "^2.0.3",
         "svelte": "^4.2.17",
+        "tsx": "^4.14.1",
         "typescript": "^5.4.5",
         "typescript-eslint": "^7.12.0",
         "vite": "^5.2.12",
         "vitest": "^1.6.0"
     },
     "dependencies": {
+        "@neondatabase/serverless": "^0.9.3",
+        "dotenv": "^16.4.5",
         "drizzle-orm": "^0.31.1",
         "uuid": "^9.0.1"
     }
